# OpenGLRenderer

./: CMakeLists.txt  README.md
Assets/Shaders/: fragment.glsl  vertex.glsl
cmake/: cotire.cmake
src/: Transform.cpp  Transform.h  main.cpp  pch.cpp  pch.h
src/Event/: Event.cpp  Event.h
src/Graphics/: Camera.cpp  Camera.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h  Window.cpp  Window.h
src/Input/: Keyboard.cpp  Keyboard.h
src/Utils/: FileUtils.cpp  FileUtils.h
